--- a/src/components/dash.css
+++ b/src/components/dash.css
@@ -1,9 +1,46 @@
 .dashboard {
     display: flex;
     flex-direction: column;
+    height: 100%;
+}
+
+.dash-bar {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(141, 255, 215);
+    height: 5em;
+    align-items: center;
+    padding-left: 3em;
 }
 
 .dash-body {
     display: flex;
     flex-direction: row;
+    height: 100%;
+    justify-content: center;
+}
+
+.dash-feed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3em;
+    background-color: rgb(193, 255, 234);
+    margin-right: 4em;
+}
+
+.dash-sidebar {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3em;
+    background-color: rgb(193, 255, 234);
+}
+
+.post {
+    width: 40em;
+    height: 10em;
+    margin-bottom: 2em;
+    background-color: rgb(213, 213, 213);
+    border-radius: 1em;
+    padding: 1em;
 }
